<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/ic_stocks"
        android:icon="@drawable/ic_briefcase"
        android:title="@string/stocks"/>

    <item
        android:id="@+id/ic_business"
        android:icon="@drawable/ic_office_building"
        android:title="@string/business" />


    <item
        android:id="@+id/ic_money_clicker"
        android:icon="@drawable/ic_dollar"
        android:title="@string/money_clicker" />

    <item
        android:id="@+id/ic_real_estate"
        android:icon="@drawable/ic_home"
        android:title="@string/real_estate"/>

    <item
        android:id="@+id/ic_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"/>

</menu>