<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.BusinessFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/PageTitle"
            android:text="@string/business"
            android:layout_marginTop="20dp"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:cardElevation="0dp"
            app:cardCornerRadius="18dp"
            android:layout_marginTop="12dp"
            app:cardBackgroundColor="#ECF1F5">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/tvSummaryProfit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/money"
                    android:layout_marginStart="15dp"
                    android:textSize="@dimen/card_balance_large_font_size"
                    android:textColor="@color/black_light"
                    android:fontFamily="@font/inter_semibold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/summary_hour_profit"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="2dp"
                    android:textColor="@color/green_positive"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <Button
            android:id="@+id/btnCreateBusiness"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/blue_nice"
            android:textColor="@color/white"
            app:cornerRadius="15dp"
            android:text="@string/open_business"
            android:letterSpacing="0"
            android:fontFamily="@font/inter_regular"
            android:visibility="visible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_companies"
            style="@style/subTitle"
            android:layout_marginTop="30dp"
            android:layout_marginStart="15dp"/>

        <TextView
            android:id="@+id/tv_no_business"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PageTitle"
            android:fontFamily="@font/inter_regular"
            android:textSize="14sp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:text="@string/no_owned_business"
            android:textColor="#858585"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back"
            app:layout_constraintBottom_toBottomOf="@+id/btn_back"
            android:visibility="visible"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rcViewMyCompanies"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:overScrollMode="never"/>



    </LinearLayout>


</androidx.core.widget.NestedScrollView>