<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CreateBusinessFragment"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <ImageButton
            android:id="@+id/cbc_back"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/ic_back_arrow"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/PageTitle"
            android:layout_marginTop="20dp"
            android:layout_marginStart="0dp"
            android:layout_marginBottom="20dp"
            android:text="@string/choose_new_business_category"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="2"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardShop"
                    style="@style/cbc_card">
                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_shop"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/shop"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_shop" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardTaxiStation"
                    style="@style/cbc_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_taxi_station"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/taxi_station"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_taxi_station" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardBuildingCompany"
                    style="@style/cbc_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_building_company"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/building_company"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_building_company" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginStart="7dp"
                android:orientation="vertical">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardFactory"
                    style="@style/cbc_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_factory"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/factory"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_factory" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardTransportationCompany"
                    style="@style/cbc_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_transportation"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/transportation"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_transportation" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/optionCardBank"
                    style="@style/cbc_card">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        style="@style/cbc_card_container">
                        <ImageView
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:src="@drawable/business_im_bank"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintStart_toStartOf="parent"/>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintBottom_toBottomOf="parent">

                            <TextView
                                style="@style/cbc_card_title"
                                android:text="@string/bank"/>
                            <TextView
                                style="@style/cbc_card_subtitle"
                                android:text="@string/start_price_bank" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>